[package]
name = "network_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.10.1"
rustc-serialize = "0.3.24"
clap = { version = "3.2.21", features = ["derive"] }

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]